Add dependencies and build plugins